--- a/tasty-cake.html
+++ b/tasty-cake.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="tasty-cakes-styles.css.">
+    <link rel="stylesheet" href="tasty-cakes-styles.css">
     <title>Tasty Cakes</title>
 </head>
 <body>
