--- a/tasty-cake.html
+++ b/tasty-cake.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="Tasty Cakes-Styles.css">
+    <link rel="stylesheet" href="tasty-cakes-styles.css">
     <title>Tasty Cakes</title>
 </head>
 <body>
@@ -67,7 +67,7 @@
     </tr>
     <tr>
         <td colspan="2">
-            <h3><a href="Tasty cake2.html" target="_blank">Contact Me</a></h3>
+            <h3><a href="tasty-cake2.html" target="_blank">Contact Me</a></h3>
         </td>
     </tr>
     </table>
